# job-posting-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  example_job_postings_raw.json  pyproject.toml
src/job_posting_extractor/: __init__.py  config.py  exceptions.py  models.py
src/job_posting_extractor/api/: __init__.py  dependencies.py  service.py
src/job_posting_extractor/api/routers/: __init__.py  extraction.py
src/job_posting_extractor/connectors/: __init__.py  base.py  claude.py  mock_claude.py  openai_compat.py  shared.py
src/job_posting_extractor/services/: __init__.py  extraction.py
tests/: __init__.py  conftest.py  test_api.py  test_claude_connector.py  test_exceptions.py  test_extraction_service.py  test_models.py
